--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "cheerio": "^1.2.0",
+    "disqus-react": "^1.1.7",
     "lucide-react": "^0.563.0",
     "next": "16.0.8",
+    "prop-types": "^15.8.1",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
